--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:clientesdb
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
