--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:clientesdb
+spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Bogota&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
