Añadiendo dependencia OpenPdf para exportar archivos

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,15 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
-		
+
+		<!-- https://mvnrepository.com/artifact/com.github.librepdf/openpdf -->
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.0.5</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
