--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Bogota&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/db_springboot?allowPublicKeyRetrieval=true&serverTimezone=America/Bogota&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
